@startuml

title __PAGES's Class Diagram__\n

  namespace model.data {
    namespace pages {
      class model.data.pages.Item {
          + Item()
          + getDescription()
          + getTitle()
      }
    }
  }
  

  namespace model.data {
    namespace pages {
      class model.data.pages.Property {
          + Property()
          + getDescription()
          + getTitle()
      }
    }
  }
  

  model.data.pages.Item -up-|> model.data.Datum
  model.data.pages.Item o-- model.data.DatumQueryService : queryService
  model.data.pages.Property -up-|> model.data.Datum
  model.data.pages.Property o-- model.data.DatumQueryService : queryService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
